Make it work on CF

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,13 @@ app:
       url: jdbc:postgresql://localhost:5432/cats
       username: postgres
       password: admin
+
+
+---
+spring:
+  profiles: cloud
+
+app:
+  services:
+    cats: ""
+    dogs: ""
